--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     <!-- 6th Step-->
 
     <div class="container testimonial" id="6th">
-      <h2 style="text-align:center;">Testimonial</h2>
+      <h2 style="text-align:center;color: white;">Testimonial</h2>
 
       <div class="man">
        
